# Object-Paint-Agent

./: .gitignore  Dockerfile  Dockerfile.groundingdino  LICENSE  Makefile  README.md  docker-compose.groundingdino.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  pipeline.py  ui.py
app/ml/: __init__.py  detect.py  grounding_dino_wrapper.py  recolor.py  refine.py  sam2_wrapper.py  segment.py
app/ml/groundingdino_config/: GroundingDINO_SwinT_OGC.py
app/utils/: __init__.py  bbox.py  cache.py  image_io.py
docs/: ARCHITECTURE.md  AWS_DEPLOYMENT.md  AWS_DEPLOYMENT_STEPS.md  DEPLOY_TO_EC2_STEP_BY_STEP.md  OPS.md  SECURITY.md
scripts/: download_weights.py  download_weights.sh  run_sample.py
tests/: __init__.py  test_integration.py  test_recolor.py  test_refine.py
